--- a/src/app/events/employee-registration/employee-registration.component.css
+++ b/src/app/events/employee-registration/employee-registration.component.css
@@ -1,4 +1,4 @@
-.wrapper {
+/* .wrapper {
     display: flex;
     align-items: center;
     flex-direction: column; 
@@ -37,4 +37,4 @@
   padding: 0px;
   box-shadow: 0 20px 40px 0 rgba(54, 54, 54, 0.3);
   text-align: center;
-}
+} */
