--- a/src/app/pastevent/eventcard/eventcard.component.html
+++ b/src/app/pastevent/eventcard/eventcard.component.html
@@ -6,12 +6,12 @@
 <section id="team" class="pb-5">
     <div class="col-lg-10 col-sm-12 container">
         <br><br>
-       <h1 id="topic">PREVIOUS EVENTS</h1><br><br>
+       <h1 id="topic">PREVIOUS EVENTS</h1><hr>
         <div class="row">
 
 
 
-            <div *ngFor="let e of event" class="col-md-4 col-lg-4 col-sm-6">
+            <div *ngFor="let e of event" class="col-md-4 col-lg-4 col-sm-6 mb-5">
 
                 <div (click)=moredetail(e.id) class="card-deck container">
 
