--- a/src/app/profile/homepage/homepage.component.html
+++ b/src/app/profile/homepage/homepage.component.html
@@ -9,6 +9,7 @@
 
 <div id="part0" >
 <h1 id="mainH" >Creative <br>Events </h1>
+<h4 id="bottomright">Date: {{today|date:'fullDate'}}</h4>
 
 </div>
 
