--- a/src/app/profile/signup-employee/signup-employee.component.html
+++ b/src/app/profile/signup-employee/signup-employee.component.html
@@ -110,8 +110,18 @@
                 <em *ngIf="validateControl('department') && hasError('department', 'required')">*Department is required</em>
                 <em *ngIf="validateControl('department') && hasError('department', 'maxlength')">*Maximum allowed length is 6 characters.</em>
                 <div class="form-group col-md-6" >
-                   <h6>Add a Profile picture <input type="file" (change)="onFileChange($event.target.files)" />
-                   </h6> 
+                   <!-- <h6>Add a Profile picture
+                        <input type="file" (change)="onFileChange($event.target.files)" />
+                      
+                   </h6> -->
+                   
+                   <div class="image-upload-wrap">
+                        <input class="file-upload-input" type='file' onchange="readURL(this);" 
+                          multiple accept="image/*" (change)="onFileChange($event.target.files)" />
+                        <div class="drag-text">
+                          <h3>Add a Profile picture</h3>
+                        </div>
+                      </div>
                    
                   </div>
                
@@ -175,3 +185,28 @@
     </div>
 
 
+    <script>
+
+            function readURL(input) {
+              if (input.files && input.files[0]) {
+        
+                var reader = new FileReader();
+        
+                reader.onload = function (e) {
+                  $('.image-upload-wrap').hide();
+        
+                  $('.file-upload-image').attr('src', e.target.result);
+                  $('.file-upload-content').show();
+        
+                  $('.image-title').html(input.files[0].name);
+                };
+        
+                reader.readAsDataURL(input.files[0]);
+        
+              }
+        
+            }
+        
+        
+        
+          </script>
