--- a/src/app/task/view-task/view-task.component.html
+++ b/src/app/task/view-task/view-task.component.html
@@ -1,7 +1,7 @@
 <div class=" my-3 p-3 rounded box-shadow">
   <!-- <h6 class="border-bottom border-secondary pb-2 mb-0 font-weight-bold"></h6> -->
 
-  <div class="border-bottom border-secondary media text-muted " *ngFor="let i of result;">
+  <div class="border-bottom border-secondary media text-muted mb-3 " *ngFor="let i of result;">
 
     <p class="media-body pb-3 mb-0 lh-125">
       <strong class="d-block text-black-dark ">{{i.taskName}}
