--- a/src/app/events/view-event-page/view-event-page.component.html
+++ b/src/app/events/view-event-page/view-event-page.component.html
@@ -1,98 +1,104 @@
-
 <app-nav-bar></app-nav-bar>
 
-<div id="background" *ngIf="event"  >
-    <div id="backgroundIN" >
-<br/><br/>
+<div id="background" *ngIf="event">
+  <div id="backgroundIN">
+    <br /><br />
 
 
 
-  <section>
-    <div class="container">
-      <div class="card">
-        <div class="row">
-          <div class="col-md-6 col-sm-10">
-            <br>
+    <section>
+      <div class="container">
+        <div class="card p-5">
+          <div class="row">
+            <div class="col-md-6 col-sm-10">
               <h1 id="h1" class="card-title">{{event.eventTitle}}</h1>
+              <hr>
+            </div>
+            <div class="col-md-6 col-sm-10">
+              <br><br>
+              <hr>
+            </div>
           </div>
-          <div class="col-md-6 col-sm-10" >
-            <br>
-            
-              <h4 id="h2" class="card-text">Date: {{event.startDate | date}}</h4>
-              <h3 id="h2" *ngIf="destination"class="card-text">Destination: {{event.destination}}</h3>
-              <h3 id="h2" *ngIf="venue" class="card-text">Venue: {{event.venue}}  <button id="teamviewbtn" *ngIf="event.eventTypeId==1" class="btn"  (click)="TeamView(event.id)">Team View</button></h3>
-          </div>
-        </div>
-  
-        <div class="row">  
-            <div class="col-md-6">
-                <div class="card-img-bottom" id="division">
-                    <img class="card-img " id="image" style="width: 100%; height: 450px;"[src]="ImageUrl+event.eventImageUrl">
-    
-                </div>
-              </div>         
-          <div class="col-md-6">
-           
-            <div class="card-block" id="dis">
-              <br/>
-             
-              <p class="card-text">{{event.eventDescription}}</p>
-              
-            
 
-              <p *ngIf="closingDate" class="card-text">Registration Closing Date: {{event.closingDate | date}}</p>
-              <p class="card-text" *ngIf="endDate">EndDate of Event: {{event.endDate | date}}</p>
-              <p class="card-text" *ngIf="isFamilyMembersAllowed">Whether Family Members Allowed: {{event.isFamilyMembersAllowed}}</p>
-              <p class="card-text" *ngIf="liquor">Liquor: {{event.liquor}}</p>
-              <p class="card-text" *ngIf="numberOfTeams">Number of Teams: {{event.numberOfTeams}}</p>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="card-img-bottom" id="division">
+                <img class="card-img " id="image" style="width: 100%; height: 450px;" [src]="ImageUrl+event.eventImageUrl">
+
+              </div>
+            </div>
+            <div class="col-md-6">
+
+              <div class="card-block" id="dis">
+
+                <h4 id="h2" class="card-text">Date: {{event.startDate | date}}</h4>
+                <h3 id="h2" *ngIf="destination" class="card-text">Destination: {{event.destination}}</h3>
+                <h3 id="h2" *ngIf="venue" class="card-text">Venue: {{event.venue}} <button id="teamviewbtn" *ngIf="event.eventTypeId==1"
+                    class="btn" (click)="TeamView(event.id)">Team View</button></h3>
+
+                <br>
+
+                <p class="card-text">{{event.eventDescription}}</p>
+
+
+
+                <p *ngIf="closingDate" class="card-text">Registration Closing Date: {{event.closingDate | date}}</p>
+                <p class="card-text" *ngIf="endDate">EndDate of Event: {{event.endDate | date}}</p>
+                <p class="card-text" *ngIf="isFamilyMembersAllowed">Whether Family Members Allowed:
+                  {{event.isFamilyMembersAllowed}}</p>
+                <p class="card-text" *ngIf="liquor">Liquor: {{event.liquor}}</p>
+                <p class="card-text" *ngIf="numberOfTeams">Number of Teams: {{event.numberOfTeams}}</p>
+
+              </div>
 
             </div>
-           
+
           </div>
-         
+
+
+          <br>
+          <hr>
+
+          <div class="row">
+            <div id="form" class="col-sm-9" *ngIf="this.form!=null&&this.register">
+              <app-employee-registration></app-employee-registration>
+            </div>
+            <div id="form" class="col-sm-9" *ngIf="this.form===null||!this.register">
+            </div>
+            <div class="col-sm-1" *ngIf="this.IsAdmin||this.IsRC">
+              <button type="button" class="btn btn-link" (click)="addRegistrationForm()" *ngIf="this.form===null">Add
+                Registration Form</button>
+              <button type="button" class="btn btn-link" (click)="updateEvent()">Update Event</button>
+              <!-- <button type="button" class="btn btn-link" (click)="deleteEmployee(content)" *ngIf="this.form!=null">Delete Registered Employee</button> -->
+              <button type="button" class="btn btn-link" (click)="viewEmployee()">View Registered Employees</button>
+              <!-- <button type="button" class="btn btn-link" (click)="registerEmployee()">Add Registered Employees</button> -->
+            </div>
+          </div>
+
         </div>
-      </div>
-    </div>
-  </section>
-<br/><br/>
 
+        <div class="card p-5">
+          <div class="row mb-1">
 
-
-<div class="row" >
-    <div id="form" class="col-sm-9" *ngIf="this.form!=null&&this.register">
-        <app-employee-registration></app-employee-registration>
-      </div>
-      <div id="form" class="col-sm-9" *ngIf="this.form===null||!this.register">
-      </div>
-      <div class="col-sm-1" *ngIf="this.IsAdmin||this.IsRC">
-          <button type="button" class="btn btn-link"(click)="addRegistrationForm()" *ngIf="this.form===null">Add Registration Form</button>
-          <button type="button" class="btn btn-link"(click)="updateEvent()">Update Event</button>
-          <!-- <button type="button" class="btn btn-link" (click)="deleteEmployee(content)" *ngIf="this.form!=null">Delete Registered Employee</button> -->
-          <button type="button" class="btn btn-link" (click)="viewEmployee()">View Registered Employees</button>
-          <!-- <button type="button" class="btn btn-link" (click)="registerEmployee()">Add Registered Employees</button> -->
+            <div class="col-md-12" *ngIf="this.IsAdmin||this.IsRC">
+              <h3 class="pb-2 mb-0 pl-3">Assign Task </h3>
+              <app-addtask></app-addtask>
+            </div>
+          </div>
         </div>
+
+        <div class="card p-5">
+          <div class="row mb-1">
+
+            <div class="col-md-12">
+              <h3 class=" pb-2 mb-0 pl-3">Recently Added Task </h3>
+              <app-view-task></app-view-task>
+            </div>
+          </div>
+        </div>
+
+
+      </div>
+    </section>
+  </div>
 </div>
-<br/><br/>
-  
-          <br/>
-  <div class="row mb-1">
-  <div class="col-md-1"></div>
-      <div class="col-md-10" *ngIf="this.IsAdmin||this.IsRC">
-          <h4 class="border-bottom border-secondary pb-2 mb-0">Assign Task </h4>  
-          <app-addtask></app-addtask>
-        </div>
-      </div>
-      <br/><br/>
-      <div class="row mb-1">
-          <div class="col-md-1"></div>
-              <div class="col-md-10">
-                  <h4 class="border-bottom border-secondary pb-2 mb-0">Recently Added Task </h4>  
-                  <app-view-task></app-view-task>
-                </div>
-              </div>
-              <br/><br/>
-
-                
-              
-  </div>
-  </div>
