--- a/src/app/shared-module/nav-bar/nav-bar.component.css
+++ b/src/app/shared-module/nav-bar/nav-bar.component.css
@@ -3,6 +3,7 @@
     width: 240px;
     background-color: rgba(245, 69, 63, 0.911)
 }
+
 #imgnotification{
     width: 20px;
     height: 20px;
@@ -47,7 +48,7 @@
     top: 0;
    height: 4em;
     width: 100%;
-    z-index: +1;
+    z-index: +99;
     background-color: rgb(176,14,35);
 }
 #navBar a{
@@ -55,6 +56,13 @@
     font-size: 12pt;
 }
 #navBar a:hover{
+    color: rgb(15, 1, 1);
+    
+    -webkit-text-shadow: 0 30px 60px 0 rgba(71, 70, 70, 0.3);
+    text-shadow: 0 30px 60px 0 rgba(247, 247, 247, 0.3);
+    font-size: 12.5pt;
+}
+#navBar a:active{
     color: rgb(15, 1, 1);
     
     -webkit-text-shadow: 0 30px 60px 0 rgba(71, 70, 70, 0.3);
