--- a/src/app/task/contacts/contacts.component.css
+++ b/src/app/task/contacts/contacts.component.css
@@ -2,7 +2,7 @@
   
     top: 0;
     left: 0;
-    background-image: url('/../../../assets/Back/back5.jpg');
+    background-image: url('/../../../assets/Back/back32.jpg');
     width: 100%;
     height: 100%;
     z-index: -1;
@@ -23,7 +23,8 @@
 }
 #cardAdd{
     background-color: rgba(0, 0, 0, 0.39);
-  min-height: 10em
+  
+  
 }
 #label{
     text-align: left;
@@ -31,4 +32,9 @@
 
 #topic{
     text-align:center;
+}
+
+.ms {
+    min-height: 200px;
+    margin-bottom: 10px;
 }
