--- a/src/app/task/view-task/view-task.component.css
+++ b/src/app/task/view-task/view-task.component.css
@@ -1,9 +1,9 @@
-.text-muted{
+/* .text-muted{
   font: 1em ;
   text-align: left;
   margin-left: 15%;
   padding: 1%
-}
+} */
 html,
 body {
 overflow-x: hidden; /* Prevent scroll on narrow devices */
@@ -46,9 +46,9 @@ text-decoration: none;
 border-radius: 100%
 }
 
-.my-3{
+/* .my-3{
 margin-right:40%
-}
+} */
 
 
 .text-white-50 { color: rgba(255, 255, 255, .5); 
