--- a/src/app/profile/Employee/employee-password-change/employee-password-change.component.html
+++ b/src/app/profile/Employee/employee-password-change/employee-password-change.component.html
@@ -43,7 +43,7 @@
                 <label for="key" class="sr-only">Password</label>
                 <input type="password" formControlName="confirmpassword" id="confirmpassword" class="form-control"
                     required>
-                <label> Retype new Ppassword</label>
+                <label> Confirm password</label>
                 <em *ngIf="validateControl('confirmpassword') && hasError('confirmpassword', 'required')">*Confirm
                     password is required</em>
                 <em *ngIf="((Form.errors?.ismatch) )">*confirm password is not match</em>
