--- a/src/app/profile/Employee/employee-profile/employee-profile.component.html
+++ b/src/app/profile/Employee/employee-profile/employee-profile.component.html
@@ -13,8 +13,8 @@
                     <div class="lh-100">
                         <h5 class="mb-0 text-white lh-100">{{result.empName}} </h5>
                         <h5 class="mb-0 text-white lh-100"> <small (click)=updateprofile(result.empId) id="update"
-                                style="position:absolute; right:15%"> update
-                                <br><small (click)=changepassword(result.empEmail)> change Password</small></small>
+                                style="position:absolute; right:15%"> Update Profile
+                                <br><small (click)=changepassword(result.empEmail)> Change Password</small></small>
                         </h5>
                         <!-- <p (click)=changepassword(result.empEmail)> change Password</p>  -->
                         <small>{{result.empPosition}}</small>
