--- a/src/app/profile/admin-page/admin-page.component.html
+++ b/src/app/profile/admin-page/admin-page.component.html
@@ -16,7 +16,7 @@
 
                         <div id="showview">
                             <div>
-                                <h2>Admin Controller Page</h2>
+                                <h2>Admin Dashboard</h2>
                                 <hr>
 
                             </div>
@@ -26,7 +26,7 @@
                                         <button id="btn" (click)="isdepartment()" routerLink="/profile/admin/departments"
                                             routerLinkActive="active" type="button" class="btn ">View Departments</button>
                                         <button id="btn" (click)="isrole()" routerLink="/profile/admin/roles"
-                                            routerLinkActive="active" type="button" class="btn ">View Roles</button>
+                                            routerLinkActive="active" type="button" class="btn ">View Positions</button>
                                         <button id="btn" (click)="isproject()" routerLink="/profile/admin/project"
                                             routerLinkActive="active" type="button" class="btn ">View Projects</button>
 
