--- a/src/app/profile/employee-register/employee-register.component.html
+++ b/src/app/profile/employee-register/employee-register.component.html
@@ -12,7 +12,7 @@
       
           <!-- Login Form -->
           <h4 id="error">{{message}}</h4>
-          <h5> Check your email, and type code here to complete your registration!</h5>
+          <h5> Check your email and  enter the security code to complete your registration!</h5>
           <form [formGroup]="registerForm" autocomplete="off" novalidate (ngSubmit)="Register(registerForm.value)">
                        
                   <div class="form-row">
