--- a/src/app/profile/Department/show-departments-details/show-departments-details.component.html
+++ b/src/app/profile/Department/show-departments-details/show-departments-details.component.html
@@ -4,7 +4,7 @@
     <div class="col-md-12">
       <div class="tableWithHeader ">
         <div class="Header">
-          <h3 class="panel-title">..All Department Details..
+          <h3 class="panel-title">Departments
           </h3>
 
         </div>
