--- a/src/app/profile/Employee/show-employees-details/show-employees-details.component.html
+++ b/src/app/profile/Employee/show-employees-details/show-employees-details.component.html
@@ -64,8 +64,7 @@
 
                         <div class="col-md-3">
                             <div *ngIf="isAdmin||isRC">
-                                <a *ngIf="!(clickId==i.id)" (click)="getId(i.id)" href="void:;">Take
-                                    special notification</a>
+                                <a *ngIf="!(clickId==i.id)" (click)="getId(i.id)" href="void:;">Send notification</a>
                                 <a *ngIf="(clickId==i.id)" (click)="send()" href="void:;">Send</a>
                                 <input *ngIf="clickId==i.id" (keyup)="onKey($event.target.value)">
 
