--- a/src/app/profile/Employee/update-employee/update-employee.component.html
+++ b/src/app/profile/Employee/update-employee/update-employee.component.html
@@ -41,7 +41,7 @@
             </div>
             <div class="form-group col-md-6">
               <!-- <input type="text" class="form-control"  placeholder="Enter Id" formControlName="id" id="id" > -->
-              <input class="form-control" type="text" formControlName="id" required>
+              <input  class="form-control" type="text" formControlName="id" required>
               <label>Id</label>
               <em *ngIf="validateControl('id') && hasError('id', 'required')">*Id is required</em>
               <em *ngIf="validateControl('id') && hasError('id', 'maxlength')">*Maximum allowed length is 6 characters.</em>
@@ -72,8 +72,8 @@
             <div class="form-group col-md-6">
               <!-- <input  placeholder="Address Lane" class="form-control" type="text" formControlName="address2" id="address2"> -->
               <input class="form-control" type="text" formControlName="address2" required>
-              <label>Address & Lane</label>
-              <em *ngIf="validateControl('address2') && hasError('address2', 'required')">*Town is required</em>
+              <label>Address</label>
+              <em *ngIf="validateControl('address2') && hasError('address2', 'required')">*Address is required</em>
               <em *ngIf="validateControl('address2') && hasError('address2', 'maxlength')">*Maximum allowed length is 6
                 characters.</em>
 
