--- a/src/app/profile/Position/show-roles-details/show-roles-details.component.html
+++ b/src/app/profile/Position/show-roles-details/show-roles-details.component.html
@@ -6,7 +6,7 @@
 			<div class="col-md-12">
 				<div class="tableWithHeader ">
 					<div class="Header">
-						<h3 class="panel-title">..All Position Details.. 
+						<h3 class="panel-title">Positions 
             </h3>
 						
 					</div>
