--- a/src/app/profile/Project/project-view/project-view.component.html
+++ b/src/app/profile/Project/project-view/project-view.component.html
@@ -4,7 +4,7 @@
     <div class="col-md-12">
       <div class="tableWithHeader ">
         <div class="Header">
-          <h3 class="panel-title">..All Project Details..
+          <h3 class="panel-title">Project Details
             <!-- <button type="button" class="btn  btn-sm" data-toggle="modal" data-target="#myModal">crate</button -->
           </h3>
 
