--- a/src/app/profile/signup-employee/signup-employee.component.html
+++ b/src/app/profile/signup-employee/signup-employee.component.html
@@ -64,8 +64,8 @@
           <div class="form-group col-md-6">
             <!-- <input  placeholder="Re Again Password" class="form-control" formControlName="confirmpassword" type="password" id="confirmpassword"> -->
             <input type="password" formControlName="confirmpassword" required>
-            <label>Re Enter Password </label>
-            <em *ngIf="validateControl('confirmpassword') && hasError('confirmpassword', 'required')">*Password is
+            <label>Confirm Password </label>
+            <em *ngIf="validateControl('confirmpassword') && hasError('confirmpassword', 'required')">*Confirm password is
               required</em>
             <em *ngIf="((ownerForm.errors?.ismatch) )">*confirm password is not match</em>
 
@@ -82,13 +82,13 @@
             <em *ngIf="validateControl('address1') && hasError('address1', 'required')">*City is required</em>
             <em *ngIf="validateControl('address1') && hasError('address1', 'maxlength')">*Maximum allowed length is 6
               characters.</em>
-            Add a Profile picture
+   
           </div>
           <div class="form-group col-md-6">
             <!-- <input  placeholder="Address Lane" class="form-control" type="text" formControlName="address2" id="address2"> -->
             <input formControlName="address2" required>
-            <label>Enter Address Lane </label>
-            <em *ngIf="validateControl('address2') && hasError('address2', 'required')">*Town is required</em>
+            <label>Enter Address </label>
+            <em *ngIf="validateControl('address2') && hasError('address2', 'required')">*Address is required</em>
             <em *ngIf="validateControl('address2') && hasError('address2', 'maxlength')">*Maximum allowed length is 6
               characters.</em>
 
@@ -97,7 +97,7 @@
 
 
             <select class="form-control" formControlName="project" placeholder="project" id="project">
-              <option value="" selected disabled hidden>projects</option>
+              <option value="" selected disabled hidden>Project</option>
               <option [value]="p.prId" *ngFor="let p of projects">{{p.projectName}}</option>
             </select>
           </div>
